--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -1,4 +1,5 @@
 <div class="users-list">
   <button routerLink="user1">Giorgi Bazerashzili</button>
   <button routerLink="user2">Kote Kirkitadze</button>
+  <button routerLink="user3">Giorgi Beruashvili</button>
 </div>
