--- a/src/app/components/users-list/users-list.component.html
+++ b/src/app/components/users-list/users-list.component.html
@@ -2,4 +2,5 @@
   <button routerLink="user1">Giorgi Bazerashzili</button>
   <button routerLink="user2">Kote Kirkitadze</button>
   <button routerLink="user3">Giorgi Beruashvili</button>
+  <button routerLink="user4">Besarion Gagelidze</button>
 </div>
