--- a/src/app/user2/user2.component.html
+++ b/src/app/user2/user2.component.html
@@ -1,4 +1,9 @@
-<div class="container">
-  <button routerLink="">Back</button>
-  <h1>Kote ❤</h1>
-</div>
+<ng-container>
+  <app-loading color="black" *ngIf="loading; else noLoading"></app-loading>
+</ng-container>
+<ng-template #noLoading>
+  <div class="container">
+    <button routerLink="">Back</button>
+    <h1>Kote ❤</h1>
+  </div>
+</ng-template>
