--- a/src/app/user1/user1.component.html
+++ b/src/app/user1/user1.component.html
@@ -3,7 +3,7 @@
 </ng-container>
 <ng-template #noLoading>
   <div class="container">
-    <button routerLink="">Back</button>
+    <button [routerLink]="empty">Back</button>
     <h1>Bazera ❤</h1>
   </div>
 </ng-template>
